added resume drive link

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </li>
 
             <li class="nav-item">
-                <a href="#" class="nav-link">
+                <a href="https://drive.google.com/file/d/1RcCOiPeNBty2i9piGebkWOGj7BGkZmWR/view?usp=sharing" class="nav-link">
                     <svg aria-hidden="true" focusable="false" data-prefix="fad" data-icon="space-station-moon-alt"
                         role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"
                         class="svg-inline--fa fa-space-station-moon-alt fa-w-16 fa-5x">
@@ -191,8 +191,7 @@
             <div class="footer">
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">About Me</a></li>
-                    <li><a href="#">Resume</a></li>
+                    <li><a href="https://drive.google.com/file/d/1RcCOiPeNBty2i9piGebkWOGj7BGkZmWR/view?usp=sharing">Resume</a></li>
                     <li><a href="#">Projects</a></li>
                 </ul>
             </div>
