minor updates in css and html footer

--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
             </li>
 
             <li class="nav-item">
-                <a href="https://drive.google.com/file/d/1RcCOiPeNBty2i9piGebkWOGj7BGkZmWR/view?usp=sharing" class="nav-link">
+                <a href="https://drive.google.com/file/d/1RcCOiPeNBty2i9piGebkWOGj7BGkZmWR/view?usp=sharing"
+                    class="nav-link">
                     <svg aria-hidden="true" focusable="false" data-prefix="fad" data-icon="space-station-moon-alt"
                         role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"
                         class="svg-inline--fa fa-space-station-moon-alt fa-w-16 fa-5x">
@@ -185,18 +186,34 @@
     <!-- <section class="bg colour-3">
     </section>  -->
 
+
+
+    <!-- Section 4 | footer -->
     <section class="bg-bottom colour-4">
-        <div class="container-row">
-            <div class="footer">Copyright © 2020 Mohamed Riaz. All rights reserved</div>
-            <div class="footer">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="https://drive.google.com/file/d/1RcCOiPeNBty2i9piGebkWOGj7BGkZmWR/view?usp=sharing">Resume</a></li>
-                    <li><a href="#">Projects</a></li>
-                </ul>
-            </div>
+        <div class="footer">
+            <table style="padding: 1.1rem;">
+                <tr>
+                    <th style="border: 1px solid black ; padding: 1rem; border-radius: 0.5rem;" rowspan="2">
+                        <div class="footer">Copyright © 2020 Mohamed Riaz. All rights reserved</div>
+                    </th>
+                    <td>
+                        <a href="#">Home</a>
+                    </td>
+
+                </tr>
+                <tr>
+                    <td>
+                        <a
+                            href="https://drive.google.com/file/d/1RcCOiPeNBty2i9piGebkWOGj7BGkZmWR/view?usp=sharing">Resume</a>
+                    </td>
+                    <td>
+                        <a href="#">Projects</a>
+                    </td>
+                </tr>
+            </table>
         </div>
     </section>
+
 
 
 
