about me section changes

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
     <!-- Section 2 | About me -->
     <section class="bg colour-2">
-        <div class="container-row">
+        <div class="para">
             <div class="section-2">
                 <h1 class="bold dark">About Me</h1>
             </div>
