--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     </section>
 
     <!-- Section 2 | About me -->
-    <section class="bg colour-2">
+    <section class="bg colour-2 tex-1">
         <div class="para">
             <div class="section-2">
                 <h1 class="bold dark">About Me</h1>
