--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <span class="section-1">I ❤ web development and machine learning</span>
             </div>
             <div class="container-column photo">
-                <img id="sec-1-img" src="drive/images/my pic1.jpeg" alt="Mohamed Riaz profile picture">
+                <img id="sec-1-img" src="drive/images/comp_my pic1.jpg" alt="Mohamed Riaz profile picture">
             </div>
         </div>
     </section>
