css positioning update

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <nav class="navbar">
         <ul class="navbar-nav">
             <li class="logo">
-                <a href="#" class="nav-link">
+                <div class="nav-link no-clk">
                     <span class="link-text logo-text">MOHAMED</span>
                     <svg aria-hidden="true" focusable="false" data-prefix="fad" data-icon="angle-double-right"
                         role="img" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -41,11 +41,11 @@
                                 points="38.13 58.57 22.43 58.57 3.98 32.22 0.44 27.17 16.14 27.17 19.68 32.22 38.13 58.57" />
                         </g>
                     </svg>
-                </a>
+                </div>
             </li>
 
             <li class="nav-item">
-                <a href="#" class="nav-link">
+                <a href="index.html" class="nav-link">
                     <svg aria-hidden="true" focusable="false" data-prefix="fad" data-icon="cat" role="img"
                         xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"
                         class="svg-inline--fa fa-cat fa-w-16 fa-9x">
@@ -92,7 +92,8 @@
                                 L487.3,268.5z M299,360.3c0,13-10.7,23.7-23.9,23.7h-39.2c-11.5,0-23.9-8.5-23.9-27.5V345h87V360.3z M316.8,297.5
                                 c-9,7.3-14.7,16.6-16.6,26.5H212c-1.5-9.6-6.8-18.6-15.6-25.4c-23.7-18.6-37.1-46.5-36.5-76.8c1.1-50.8,43.5-92.8,94.5-93.4
                                 c25.8-0.6,50.6,9.4,69.1,27.7c18.3,17.9,28.4,42,28.4,67.6C352,252.5,339.2,279.4,316.8,297.5z"
-                                class="fa-secondary"></path>
+                                class="fa-secondary">
+                            </path>
                             <path fill="currentColor"
                                 d="M299,344.8v15.3c0,13-10.7,23.7-23.9,23.7h-39.2c-11.5,0-23.9-8.5-23.9-27.5v-11.5H299z"
                                 class="fa-primary">
@@ -119,7 +120,8 @@
                             c-70.3,0-128.3,54.1-134.3,124.1C39.2,183.3,0,231.1,0,286c0,66.2,54.8,120,121,120h50.9l-13.4-20c-9.2-13.8-10.1-31.5-2.2-46.2
                             c5.4-10.1,14.3-17.5,24.7-21.2V271c0-24.8,20.2-45,45-45h60c24.8,0,45,20.2,45,45v47.6c10.4,3.7,19.3,11.1,24.7,21.2
                             c7.8,14.6,7,32.3-2.2,46.2L340.1,406H391c66.2,0,121-53.8,121-120C512,236.5,480.9,193.6,435.5,175.4z"
-                                class="fa-secondary"></path>
+                                class="fa-secondary">
+                            </path>
                             <path fill="currentColor" d="M329.2,353.9c-2.6-4.9-7.7-7.9-13.2-7.9h-15v-75c0-8.3-6.7-15-15-15h-60c-8.3,0-15,6.7-15,15v75h-15
                                 c-5.5,0-10.6,3-13.2,7.9s-2.3,10.8,0.7,15.4l60,90c2.8,4.2,7.5,6.7,12.5,6.7s9.7-2.5,12.5-6.7l60-90
                                 C331.5,364.7,331.8,358.8,329.2,353.9z" class="fa-primary"></path>
@@ -155,68 +157,57 @@
     <!-- Section 1 | profile photo + name -->
     <img class="design" src="drive/svg/grey mandel horizontal.svg" alt="background design">
     <section class="bg colour-1">
-        <div class="container-row">
-            <div class="container-column">
-                <h1 class="section-1">Hi, I am Riaz</h1>
-                <span class="section-1">I ❤ web development and machine learning</span>
-            </div>
-            <div class="container-column photo">
-                <img id="sec-1-img" src="drive/images/comp_my pic1.jpg" alt="Mohamed Riaz profile picture">
+        <div class="container">
+            <div class="section-1 bg alg-center">
+                <div>
+                    <h1 class="section-1">Hi, I am Riaz</h1>
+                    <span class="section-1">I ❤ web development and machine learning</span>
+                </div>
+                <div class="photo">
+                    <img id="sec-1-img" src="drive/images/comp_my pic1.jpg" alt="Mohamed Riaz profile picture">
+                </div>
             </div>
         </div>
     </section>
 
     <!-- Section 2 | About me -->
-    <section class="bg colour-2 tex-1">
-        <div class="para">
-            <div class="section-2">
+    <section class="bg-67 colour-2">
+        <div class="container">
+            <div class="bg-75 flex-col fx-justify-ev">
                 <h1 class="bold dark">About Me</h1>
-            </div>
-            <div class="section-2 thin">
-                <p>Riaz is a self-learner and creative problem solver who loves to be a part of the culture that
-                    develops state of the
-                    art products. After receiving his Bachelor's degree in Electrical Engineering
-                    in 2019. He joined <a href="https://www.exor-robotics.com/">Exor Robotics</a> as Technical Advisor.
-                    He has worked on projects related to neural networks, Python and is currently learning web
-                    development.
-                    Now he is looking forward to work as Machine learning Engineer or web-developer.</p>
+                <p>I’m a creative problem-solver who loves to be in a culture that develops state of the
+                    art product with data-driven insights and conscientious team. I still remember my days of internship
+                    where I got to develop my knowledge and enthusiasm for deep learning. Having been the curious fellow
+                    in the room to solve utmost problems using deep learning.
+
+                    This passion of becoming a full-stack developer along with machine learning remains with me.
+
+                    So, now, in industry, There's certainly yet more to learn, yet
+                    more problems to solve, and yet more to build. And for this, I am very grateful.</p>
             </div>
         </div>
     </section>
-    <!-- <section class="bg colour-3">
-    </section>  -->
 
-
-
-    <!-- Section 4 | footer -->
-    <section class="bg-bottom colour-4">
-        <div class="footer">
-            <table style="padding: 1.1rem;">
-                <tr>
-                    <th style="border: 1px solid black ; padding: 1rem; border-radius: 0.5rem;" rowspan="2">
-                        <div class="footer">Copyright © 2020 Mohamed Riaz. All rights reserved</div>
-                    </th>
-                    <td>
-                        <a href="#">Home</a>
-                    </td>
-
-                </tr>
-                <tr>
-                    <td>
-                        <a
+    <!--footer -->
+    <section class="footer colour-4">
+        <div class="container">
+            <div class="flex-row fx-justify-bw alg-center s-font">
+                Copyright © 2020 Mohamed Riaz. All rights reserved
+                <ul class="flex-row ">
+                    <li class="flex-list-items">
+                        <a class="s-font" href="https://racyriaz.github.io/riaz-website/">Home</a>
+                    </li>
+                    <li class="flex-list-items">
+                        <a class="s-font"
                             href="https://drive.google.com/file/d/1RcCOiPeNBty2i9piGebkWOGj7BGkZmWR/view?usp=sharing">Resume</a>
-                    </td>
-                    <td>
-                        <a href="#">Projects</a>
-                    </td>
-                </tr>
-            </table>
+                    </li>
+                    <li>
+                        <a class="s-font" href="#">Projects</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </section>
-
-
-
-
 </body>
 
 </html>
