completed index page
must complete other pages and link in index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;500;600;700;900&family=Open+Sans&family=Spectral:wght@200;300;400;500;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Montserrat:wght@100;400;700;800;900&family=Open+Sans:wght@300&display=swap"
         rel="stylesheet">
 </head>
 
@@ -160,7 +160,7 @@
         <div class="container">
             <div class="section-1 bg alg-center">
                 <div>
-                    <h1 class="section-1">Hi, I am Riaz</h1>
+                    <h3 class="dark">Hi, I am <strong class="bright bold">Riaz</strong></h3>
                     <span class="section-1">I ❤ web development and machine learning</span>
                 </div>
                 <div class="photo">
@@ -174,7 +174,7 @@
     <section class="bg-67 colour-2">
         <div class="container">
             <div class="bg-75 flex-col fx-justify-ev">
-                <h1 class="bold dark">About Me</h1>
+                <h1>About Me</h1>
                 <p>I’m a creative problem-solver who loves to be in a culture that develops state of the
                     art product with data-driven insights and conscientious team. I still remember my days of internship
                     where I got to develop my knowledge and enthusiasm for deep learning. Having been the curious fellow
